--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
                 <h2 class="memories-title">Every picture, a memory. Every memory, a smile.</h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="images/Img01.jpeg" alt="Memory 1" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 1';">
+                        <img src="img01.jpeg" alt="Memory 1" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 1';">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/img02.jpeg" alt="Memory 2" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 2';">
+                        <img src="img02.jpeg" alt="Memory 2" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 2';">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/img03.jpeg" alt="Memory 3" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 3';">
+                        <img src="img03.jpeg" alt="Memory 3" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 3';">
                     </div>
                     <div class="gallery-item">
-                        <img src="images/img04.jpeg" alt="Memory 4" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 4';">
+                        <img src="img04.jpeg" alt="Memory 4" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 4';">
                     </div>
                 </div>
             </div>
@@ -98,4 +98,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
