--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2 class="memories-title">Every picture, a memory. Every memory, a smile.</h2>
                 <div class="gallery">
                     <div class="gallery-item">
-                        <img src="img01.jpeg" alt="Memory 1" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 1';">
+                        <img src="Img01.jpeg" alt="Memory 1" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 1';">
                     </div>
                     <div class="gallery-item">
                         <img src="img02.jpeg" alt="Memory 2" onerror="this.style.display='none'; this.parentElement.innerHTML='Memory 2';">
@@ -100,3 +100,4 @@
 </body>
 
 </html>
+
